--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,11 @@ spring:
     view:
       prefix: /WEB-INF/views/
       suffix: .jsp
+
+server:
+  port: 9090
+  servlet:
+    context-path: /
+    encoding:
+      charset: utf-8
+      enabled: true
